# chat-server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  cbuild.sh  docker-build.sh  docker-run-build.sh
.devcontainer/: devcontainer.json
.github/workflows/: integrate.yml
hooks/: docker-build-asio.sh
src/: CMakeLists.txt  main_client.cpp  main_server.cpp
src/client/: CMakeLists.txt  client.cpp  client.hpp
src/server/: CMakeLists.txt  message.hpp  server.cpp  server.hpp
src/server/participant/: participant.hpp
src/server/room/: room.cpp  room.hpp
src/server/session/: session.cpp  session.hpp
src/shared/: asp.hpp  message.hpp
workflows/: integrate.yml  notes.md
